Fixed missing "directions" variable, missing "empty" sim method.

--- a/Python/py_simulator.org
+++ b/Python/py_simulator.org
@@ -349,6 +349,7 @@ class World():
     empty_char='.'
     side_wall_char='+'
     top_bottom_char='+'
+    directions = ['north', 'east', 'south', 'west']
 
     def __init__(self,size=[10,10],num_obstacles=0,
                  obstacle_locations=None):
@@ -659,7 +660,7 @@ Methods for adding objects.
         if robot is None:
             robot = eval(f'{robot_type}()')
             robot.location = location if location else self.world.empty_location()
-            robot.orientation = location if location else directions[randint(0,3)]
+            robot.orientation = orientation if orientation else self.world.directions[randint(0,3)]
         else:
             if location:
                 robot.location = location
@@ -673,6 +674,12 @@ Methods for adding objects.
 These are methods that just call their counterparts of =World=; see the description for those methods.
 
 #+begin_src python +n -i :tangle yes :comments link
+    def empty(self,location):
+        return self.world.empty(location)
+
+    def empty_location(self):
+        return self.world.empty_location()
+
     def find_object(self,description):
         return self.world.find_object(description)
 
